# bindings-hdf5

./: .gitignore  README.md  bindings-hdf5.cabal
cbits/: H5E_inline.c  H5FD_inline.c  H5FDmpi_inline.c  H5G_inline.c  H5P_inline.c  H5T_inline.c  H5_inline.c
doc/: hdf5.pc
hdf5_examples/: h5ex_d_rdwr.hs  h5ex_d_unlimadd.hs  h5ex_t_float.hs
include/: bindings.h  mangle.h  util.h
src/Bindings/: HDF5.hs
src/Bindings/HDF5/: H5.hsc  H5A.hsc  H5AC.hsc  H5C.hsc  H5D.hsc  H5E.hsc  H5F.hsc  H5FD.hsc  H5G.hsc  H5I.hsc  H5L.hsc  H5MM.hsc  H5O.hsc  H5P.hsc  H5R.hsc  H5S.hsc  H5T.hsc  H5Z.hsc  Raw.hs  Util.hs
src/Bindings/HDF5/H5FD/: Core.hsc  Direct.hsc  Family.hsc  Log.hsc  MPI.hsc  Multi.hsc  Sec2.hsc  StdIO.hsc  Windows.hsc
src/Bindings/HDF5/Raw/: H5.hsc  H5A.hsc  H5AC.hsc  H5C.hsc  H5D.hsc  H5E.hsc  H5F.hsc  H5FD.hsc  H5G.hsc  H5I.hsc  H5L.hsc  H5MM.hsc  H5O.hsc  H5P.hsc  H5R.hsc  H5S.hsc  H5T.hsc  H5Z.hsc  Util.hs
src/Bindings/HDF5/Raw/H5FD/: Core.hsc  Direct.hsc  Family.hsc  Log.hsc  MPI.hsc  Multi.hsc  Sec2.hsc  StdIO.hsc  Windows.hsc
src/Foreign/Ptr/: Conventions.hs  InOut.hs
