name:                   bindings-hdf5
version:                1.8.10-patch1
stability:              provisional

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/bindings-hdf5

category:               FFI
synopsis:               Bindings to HDF5
description:            Bindings to HDF5

source-repository head
  type: git
  location: git://github.com/mokus0/bindings-hdf5.git

Library
  hs-source-dirs:       src
  extensions:           ForeignFunctionInterface, GeneralizedNewtypeDeriving
  
  if os(linux) && arch(x86_64)
    -- Workaround for GHCi bug 781
    -- ( http://hackage.haskell.org/trac/ghc/ticket/781 )
    cc-options:     -fPIC
  
  exposed-modules:      Bindings.HDF5.Raw
                        Bindings.HDF5.Raw.H5
                        Bindings.HDF5.Raw.H5A
                        Bindings.HDF5.Raw.H5AC
                        Bindings.HDF5.Raw.H5C
                        Bindings.HDF5.Raw.H5D
                        Bindings.HDF5.Raw.H5E
                        Bindings.HDF5.Raw.H5F
                        Bindings.HDF5.Raw.H5FD
                        Bindings.HDF5.Raw.H5FD.Core
                        Bindings.HDF5.Raw.H5FD.Family
                        Bindings.HDF5.Raw.H5FD.Log
                        Bindings.HDF5.Raw.H5FD.MPI
                        Bindings.HDF5.Raw.H5FD.Multi
                        Bindings.HDF5.Raw.H5FD.Sec2
                        Bindings.HDF5.Raw.H5FD.StdIO
                        Bindings.HDF5.Raw.H5FD.Direct
                        Bindings.HDF5.Raw.H5G
                        Bindings.HDF5.Raw.H5I
                        Bindings.HDF5.Raw.H5L
                        Bindings.HDF5.Raw.H5MM
                        Bindings.HDF5.Raw.H5O
                        Bindings.HDF5.Raw.H5P
                        Bindings.HDF5.Raw.H5R
                        Bindings.HDF5.Raw.H5S
                        Bindings.HDF5.Raw.H5T
                        Bindings.HDF5.Raw.H5Z
                        Bindings.HDF5.Raw.Util
                        Foreign.Ptr.Conventions
  
  if os(windows)
    exposed-modules:    Bindings.HDF5.H5FD.Windows
  
  c-sources:            cbits/H5_inline.c
                        cbits/H5E_inline.c
                        cbits/H5FD_inline.c
                        cbits/H5FD_inline.c
                        cbits/H5FDmpi_inline.c
                        cbits/H5G_inline.c
                        cbits/H5P_inline.c
                        cbits/H5T_inline.c
  
  build-depends:        base >= 3 && <5,
                        bindings-DSL >= 1.0.9 && < 1.1,
                        bytestring,
                        libffi,
                        monad-peel,
                        primitive,
                        transformers,
                        vector

  include-dirs:         include
  pkgconfig-depends:    hdf5
